<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_backends"
        android:icon="@drawable/ic_nav_backends"
        android:title="@string/nav_backends" />
    <item
        android:id="@+id/nav_device"
        android:icon="@drawable/ic_nav_device"
        android:title="@string/nav_device" />
    <item
        android:id="@+id/nav_audit"
        android:icon="@drawable/ic_nav_audit"
        android:title="@string/nav_audit" />
    <item
        android:id="@+id/nav_logs"
        android:icon="@drawable/ic_nav_logs"
        android:title="@string/nav_logs" />
</menu>
